# egui_heatmap

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: multi_map_multi.rs  multi_map_single.rs  single_map.rs  single_map_circle.rs
src/: bitmap_data.rs  bitmap_widget_multi.rs  bitmap_widget_single.rs  colors.rs  font.rs  lib.rs  multimap.rs
src/multimap/: gamma_multiplyable.rs
