[package]
name = "egui_heatmap"
version = "0.1.0"
authors = ["Michael Völkl <michaelvoelkl@zoho.com>"]
description = "Navigatable heatmap for use together with egui"
edition = "2021"
rust-version = "1.65"
homepage = "https://github.com/voelklmichael/egui_heatmap"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/voelklmichael/egui_heatmap"
categories = ["gui", "game-development", "data-science", "image"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev", "data-science", "image"]
include = ["LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
arboard = "*"
eframe = "*"
egui = "*"
egui_extras = {version="*", features = ["image"]}
font8x8 = "*"
image = "*"
oklab = "*"
rusttype = "*"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "*", features = ["std"] }

