[package]
name = "egui_heatmap"
version = "0.1.4"
authors = ["Michael Völkl <michaelvoelkl@zoho.com>"]
description = "Navigatable heatmap for use together with egui"
edition = "2021"
rust-version = "1.65"
homepage = "https://github.com/voelklmichael/egui_heatmap"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/voelklmichael/egui_heatmap"
categories = ["gui", "science", "visualization"]
keywords = ["gui", "data-science", "image"]
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
arboard = "3.2.0"
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = { version = "0.22.0", features = ["image"] }
font8x8 = "0.3.1"
image = "0.24.6"
oklab = "1.0.0"
rusttype = "0.9.3"
 
[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "4.5.0", features = ["std"] }

